accept & reject customer orders

--- a/app/styles/orders/provider-show.scss
+++ b/app/styles/orders/provider-show.scss
@@ -1,4 +1,10 @@
 .provider-show-customer-order {
+  font-family: Montserrat-Light;
+
+  h1, h2, h3, h4 {
+    font-family: Montserrat-Regular;
+  }
+
   .button-block {
     max-width: 90%;
     min-width: 180px;
