carrito se muestra siempre asi no haya ordenes

--- a/app/templates/directives/cart-button/cart-button.jade
+++ b/app/templates/directives/cart-button/cart-button.jade
@@ -1,5 +1,4 @@
 button.cart-main-button(
   ui-sref='app.cart.index'
-  ng-if='cartButtonVM.existCartActive'
-) {{cartButtonVM.numberItems}}
+) {{cartButtonVM.numberItems!==0?cartButtonVM.numberItems:''}}
   i.ion-ios-cart-outline
