--- a/app/templates/provider/partials/new_first_part.jade
+++ b/app/templates/provider/partials/new_first_part.jade
@@ -4,7 +4,7 @@
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.ruc.$touched && providerVm.providerForm.ruc.$invalid}"
   )
-    span.input-label RUC *
+    span.input-label {{::("provider.ruc"|translate)}} *
     input(
       type='text',
       name='ruc',
@@ -20,7 +20,7 @@
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.razonsocial.$touched && providerVm.providerForm.razonsocial.$invalid}"
   )
-    span.input-label {{::("provider.businessName"|translate)}}*
+    span.input-label {{::("provider.businessName"|translate)}} *
     input(
       type='text',
       name='razonsocial',
@@ -35,7 +35,7 @@
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.establecimiento.$touched && providerVm.providerForm.establecimiento.$invalid}"
   )
-    span.input-label {{::("provider.name"|translate)}}*
+    span.input-label {{::("provider.name"|translate)}} *
     input(
       type='text',
       name='establecimiento',
@@ -60,7 +60,7 @@
   label.item.item-input.item-stacked-label(
     ng-class="{'item-error': providerVm.providerForm.representante.$touched && providerVm.providerForm.representante.$invalid}"
   )
-    span.input-label {{::("provider.LegalRepresentative"|translate)}}*
+    span.input-label {{::("provider.LegalRepresentative"|translate)}} *
     input(
       type='text',
       name='representante',
@@ -73,9 +73,10 @@
     show-error(array-messages="providerVm.errors.representante_legal")
 
   label.item.item-input.item-select
-    span.input-label {{::("provider.category"|translate)}}
+    span.input-label {{::("provider.category"|translate)}} *
     select(
-      ng-model='providerVm.providerForm.provider_category_id'
+      required
+      ng-model='providerVm.provider.provider_category_id'
       ng-options="providerCategory.id as providerCategory.titulo for providerCategory in providerVm.providerCategories")
   .errors-wrapper
     show-error(array-messages='providerVm.errors.provider_category_id')
