fix closemodal buttons

--- a/app/templates/cart/customer-order-delivery-modal.jade
+++ b/app/templates/cart/customer-order-delivery-modal.jade
@@ -6,7 +6,7 @@ ion-modal-view.slim-modal
   )
     ion-content.resource-form.checkout-form
       .ion-nav-buttons.buttons(side="primary")
-        button.button.button-clear.button-positive.button-small(
+        .button.button-clear.button-positive.button-small(
           ng-click="cartVm.closeModal()"
         )
           i.ion-close
