--- a/app/templates/profile/addresses/modal-form.jade
+++ b/app/templates/profile/addresses/modal-form.jade
@@ -3,7 +3,7 @@ ion-modal-view.checkout-modal-form
     .title.alt-logo
 
     .ion-nav-buttons.buttons(side="primary")
-      button.button.button-clear.button-positive(
+      .button.button-clear.button-positive(
         ng-click="pfaVm.closeModal()"
       ) {{::('globals.cancel'|translate)}}
 
