refactor `timeSchedule` to `toDate` filter

--- a/app/templates/directives/provider-profile-schedule/provider-profile-schedule.jade
+++ b/app/templates/directives/provider-profile-schedule/provider-profile-schedule.jade
@@ -1,7 +1,9 @@
 span.office-schedule(
   ng-if="::ppSVm.openingTime"
 )
-  | {{ ::ppSVm.openingTime | timeSchedule | formatDate:'HH:mm' }} - {{ ::ppSVm.closingTime | timeSchedule | formatDate:'HH:mm' }}
+  | {{ ::ppSVm.openingTime | toDate:'timeSchedule' | formatDate:'HH:mm' }}
+  | -
+  | {{ ::ppSVm.closingTime | toDate:'timeSchedule' | formatDate:'HH:mm' }}
 span(
   ng-if="ppSVm.fromDay"
 ) {{ ::ppSVm.fromDay }}-
