bootstrapping checkout to anon billing address

--- a/app/styles/forms/resource-form.scss
+++ b/app/styles/forms/resource-form.scss
@@ -180,6 +180,10 @@
       border-right: 0;
       margin-bottom: 30px;
     }
+
+    &--with-button {
+      padding-right: 40px;
+    }
   }
 
   .bar.bar-footer {
