--- a/app/templates/cart/checkout.jade
+++ b/app/templates/cart/checkout.jade
@@ -47,7 +47,9 @@ ion-modal-view.cart-page
         .errors-wrapper
           show-error(array-messages="cartVm.messages.observaciones")
 
-        label.item.item-input.item-select
+        label.item.item-input.item-select(
+          ng-class="{'item-error': cartVm.messages.forma_de_pago}"
+        )
           span.input-label {{::("cart.paymentMethod"|translate)}}
           select(
             ng-model='cartVm.checkoutForm.forma_de_pago'
@@ -87,13 +89,31 @@ ion-modal-view.cart-page
           span.input-label {{::("billingAddress.legendForm"|translate)}}
         ion-list
           ion-item.select-list-item(
-              ng-repeat="billingAddress in cartVm.billingAddresses track by $index"
-              ng-click="cartVm.assignBillingAddress(billingAddress)"
-              ng-class="{'selected': billingAddress.selected}"
+            ng-click="cartVm.chooseAnonBillingAddress()"
+            ng-class="{'selected': cartVm.checkoutForm.anon_billing_address}"
+          )
+            i.ion-android-checkmark-circle
+            span {{ ::("cart.anonBillingAddress" | translate) }}
+        ion-list
+          ion-item.select-list-item(
+            ng-repeat="billingAddress in cartVm.billingAddresses track by $index"
+            ng-click="cartVm.assignBillingAddress(billingAddress)"
+            ng-class="{'selected': billingAddress.selected}"
           )
             i.ion-android-checkmark-circle
             span {{billingAddress.razon_social}} ({{billingAddress.direccion}})
         show-error(array-messages='cartVm.messages.customer_billing_address_id')
+
+      .text-center.fields-wrapper(
+        ng-if="!cartVm.billingAddresses.length > 0"
+      )
+        .item.item-input.item-input--no-borders
+          p {{ ::("billingAddress.noAddressesSaved" | translate) }}
+        .item.item-input.item-input--no-borders
+          .button.button-outline.button-small.button-energized(
+            type="button"
+            ng-click="cartVm.checkoutFormAddBillingAddress()"
+          ) {{ ::("billingAddress.newBillingAddress" | translate) }}
 
     ion-footer-bar.bar-stable.bar-footer--tall
       button.button.button-outline.button-energized(
