--- a/app/templates/cart/customer-order-delivery-modal.jade
+++ b/app/templates/cart/customer-order-delivery-modal.jade
@@ -52,13 +52,18 @@ ion-modal-view.slim-modal
             i.ion-android-checkmark-circle
             span {{ ::("cart.deliveryMethods.pickup" | translate) }}
         ion-list
-          ion-item.select-list-item(
-              ng-repeat="address in cartVm.addresses track by $index"
+          .editable-list-item-wrapper(
+            ng-repeat="address in cartVm.addresses track by $index"
+          )
+            ion-item.select-list-item.select-list-item--with-button(
               ng-click="cartVm.assignAddress(address)"
               ng-class="{'selected': address.selected}"
-          )
-            i.ion-android-checkmark-circle
-            span {{address.nombre}} ({{ address.direccion_uno }})
+            )
+              i.ion-android-checkmark-circle
+              span {{address.nombre}} ({{ address.direccion_uno }})
+            .button.button-clear.button-positive.button-small.edit-list-item(
+              ng-click="cartVm.editCustomerOrderDeliveryAddress(address)"
+            ) {{ ("globals.edit" | translate) }}
         show-error(array-messages='cartVm.messages.customer_address_id')
 
       .text-center.fields-wrapper(
