--- a/app/templates/menu/menu.jade
+++ b/app/templates/menu/menu.jade
@@ -15,7 +15,7 @@ ion-side-menus(enable-menu-with-back-views='false')
           | {{::("menu.profile"|translate)}}
         ion-item(menu-close='' ui-sref='app.cart.index')
           | {{::("menu.client.cart"|translate)}}
-        ion-item(menu-close='' ui-sref='app.locations.index')
+        ion-item(menu-close='' ui-sref='app.places.index')
           | {{::("menu.locations"|translate)}}
         ion-item(menu-close='' ui-sref='app.categories.index')
           | {{::("menu.client.category"|translate)}}
