bootstrapping offices weekdays for provider

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -62,6 +62,7 @@
 @import "couriers/orders";
 @import "billing-addresses/billing-addresses";
 @import "offices/show";
+@import "offices/form";
 @import "dispatchers/show";
 @import "cart/cart";
 @import "cart/edit-item";
