--- a/app/templates/offices/new-edit.jade
+++ b/app/templates/offices/new-edit.jade
@@ -12,11 +12,11 @@ ion-modal-view
     ng-submit='officesVm.submitOffice()'
     novalidate
   )
-    ion-content.resource-form
+    ion-content.resource-form.office-form
       .list.list-inset
-        legend(ng-if="!officesVm.office.id").title
+        legend(ng-if="!officesVm.office.id")
           | {{::("globals.new"|translate)}} {{::("office.office"|translate)}}
-        legend(ng-if="officesVm.office.id").title
+        legend(ng-if="officesVm.office.id")
           | {{::("globals.edit"|translate)}} {{::("office.office"|translate)}}
 
         label.item.item-input.item-stacked-label
@@ -120,6 +120,55 @@ ion-modal-view
               | {{officesVm.office.hora_de_cierre|date: 'HH:mm a'}}
         .errors-wrapper
           show-error(array-messages='officesVm.messages.hora_de_cierre')
+
+        legend
+          | {{ ::("office.weekdays.collectionTitle" | translate) }}
+
+        .each-weekday-wrapper(
+          ng-repeat="officeWeekday in ::officesVm.office.weekdays_attributes"
+        )
+          label.item.item-input.item-stacked-label.item-input--no-borders
+            span.input-label
+              | {{ ::("globals.dayNames."+officeWeekday.day | translate)}}
+          .weekday-checkbox-wrapper
+            label.toggle
+              input(
+                type="checkbox"
+                ng-model="officeWeekday.abierto"
+              )
+              .track
+                .handle
+              span.padded(
+                ng-if="!officeWeekday.abierto"
+              ) {{ ::("office.weekdays.cerrado" | translate) }}
+
+            ion-datetime-picker.datetime-picker(
+              time
+              ng-model='officeWeekday.hora_de_apertura'
+              ng-if="officeWeekday.abierto"
+            )
+              span.padded
+                | {{ ::("office.weekdays.openFromPlaceholder" | translate) }}
+              span.datetime-picker-placeholder(
+                ng-if="!officeWeekday.hora_de_apertura"
+              ) {{ ::("office.weekdays.selectHourPlaceholder" | translate) }}
+
+              span.datetime-picker-value
+                | {{ officeWeekday.hora_de_apertura | date: 'HH:mm a' }}
+
+            ion-datetime-picker.datetime-picker(
+              time
+              ng-model='officeWeekday.hora_de_cierre'
+              ng-if="officeWeekday.abierto"
+            )
+              span.padded
+                | {{ ::("office.weekdays.openUntilPlaceholder" | translate) }}
+              span.datetime-picker-placeholder(
+                ng-if="!officeWeekday.hora_de_cierre"
+              ) {{ ::("office.weekdays.selectHourPlaceholder" | translate) }}
+
+              span.datetime-picker-value
+                | {{ officeWeekday.hora_de_cierre | date: 'HH:mm a' }}
 
     .bar.bar-footer.bar-stable
       button.button.button-small.button-outline.button-energized(
