--- a/app/styles/overrides/bar-header.scss
+++ b/app/styles/overrides/bar-header.scss
@@ -12,6 +12,21 @@
     color: $white;
     border: 0;
     background: 0;
+    position: relative;
+
+    i {
+      font-size: 32px;
+    }
+
+    .number-of-items {
+      color: $dark;
+      position: absolute;
+      margin: auto;
+      right: 0;
+      font-size: 12px;
+      line-height: 12px;
+      font-family: Montserrat-Regular;
+    }
   }
 }
 
