add img-circle to provider item imgs

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,6 +22,7 @@
 @import "common/grid";
 @import "common/slick";
 @import "common/modal";
+@import "common/images";
 @import "forms/general";
 @import "forms/inputs";
 @import "forms/resource-form";
