--- a/app/templates/directives/slick-item/slick-item.jade
+++ b/app/templates/directives/slick-item/slick-item.jade
@@ -8,7 +8,7 @@ slick-wrapper(
   )
     .slick-content(ng-click="sicVm.onClick()(providerItem)" class="clickeable")
       .img-wrapper
-        img(
+        img.img-circle(
           data-lazy="{{ ::providerItem.provider_item.imagenes[0].imagen_url }}"
         )
 
