--- a/app/templates/provider/show.jade
+++ b/app/templates/provider/show.jade
@@ -36,7 +36,9 @@ ion-view(
           ui-sref='app.categories.provider.product({id:providerItem.id, product:providerItem})'
         )
           .img-wrapper
-            img(ng-src='{{ ::(providerItem.imagenes[0].imagen_url | defaultImage)}}')
+            img.img-circle(
+              ng-src='{{ ::(providerItem.imagenes[0].imagen_url | defaultImage)}}'
+            )
           .info-wrapper
             .provider-item--title {{ ::providerItem.titulo }}
             .provider-item--subtitle
