show places’ flags

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -66,4 +66,5 @@
 @import "cart/edit-item";
 @import "orders/index";
 @import "orders/provider-show";
-@import "tabs/index"
+@import "tabs/index";
+@import "places/collection";
