--- a/app/templates/places/index.jade
+++ b/app/templates/places/index.jade
@@ -1,11 +1,18 @@
 ion-view(
-  view-title='{{::("places.place"|translate)}}'
+  view-title='{{ ::("places.places" | translate) }}'
 )
   ion-nav-title
     .alt-logo
   ion-content
-    ion-list
-      ion-item(ng-repeat="place in ::placesVm.places.places track by $index")
-        .text {{place.nombre}} - {{place.country}}
+    ion-list.places-collection
+      .item.item-divider {{ ::("places.places" | translate) }}
 
-
+      ion-item.place-item.item-icon-left.item-icon-right(
+        ng-repeat="place in ::placesVm.places.places track by $index"
+      )
+        .icon
+          img(ng-src="{{ ::place.flag_image_url }}")
+        .text {{ ::place.nombre }} - {{ ::place.country }}
+        i(
+          ng-if="$index === 0"
+        ).icon.ion-ios-checkmark-outline
