--- a/app/templates/offices/offices.jade
+++ b/app/templates/offices/offices.jade
@@ -13,7 +13,7 @@ ion-view(
       .row.table-headers
         .col.col-60 {{::("office.officeAddress"|translate)}}
         .col
-      
+
       .row.without-items(ng-if="officesVm.offices.length === 0")
         p {{::("office.officesAny"|translate)}}
 
@@ -23,5 +23,5 @@ ion-view(
         .col.col-60 {{item.direccion}}
         .col.text-right
           a.button.button-clear.button-positive.button-small(
-            ui-sref='provider.office({ id: item.id})'
+            ui-sref='provider.office({ id: item.id, office: item})'
           ) {{::("globals.seeMore"|translate)}}
