--- a/app/styles/resource/collection-table.scss
+++ b/app/styles/resource/collection-table.scss
@@ -1,4 +1,29 @@
 .resource-collection {
+  .filter-select {
+    height: 22px;
+    padding-left: 0;
+    color: $base-grey;
+
+    @media (max-width: $grid-responsive-sm-break) {
+      &:after {
+        right: 5px;
+      }
+    }
+
+    select {
+      padding-left: 0;
+      padding-right: 35px;
+      max-width: 100%;
+      font-family: Montserrat-Light;
+      color: inherit;
+
+      @media (max-width: $grid-responsive-sm-break) {
+        padding-right: 20px;
+        letter-spacing: -0.5px;
+      }
+    }
+  }
+
   .resource-collection-table {
     .col {
       align-self: center;
